[fix] nav link unopen invisible display on home page problem

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1629,7 +1629,7 @@ body {
   margin: 1rem;
 }
 .navigation__link:link, .navigation__link:visited {
-  display: inline-block;
+  display: none;
   font-size: 8rem;
   font-weight: 700;
   padding: 1rem 2rem;
@@ -1655,6 +1655,9 @@ body {
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
   width: 100%;
+}
+.navigation__checkbox:checked ~ .navigation__nav .navigation__list .navigation__item .navigation__link {
+  display: inline-block;
 }
 .navigation__icon {
   position: relative;
